# riscv-baremetal

./: README.md  cross.ini  hal_uart_dw.c  main.c  memmap  meson.build  start.S  top_reg.h  uart.c
driver/: meson.build
driver/uart/: meson.build  uart.h
hal/: meson.build
hal/hal_uart/: hal_uart_dw.h  meson.build
